--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -4,19 +4,18 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+*
   workflow_dispatch:
-name: Canary Release
 jobs:
-  canary:
+  canary-releaes:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-	uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: staging -> canary
-        uses: robotology/gh-action-nightly-merge@v1.3.2
-        with:
-          stable_branch: canary
-          development_branch: staging
-          allow_ff: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: staging -> canary
+      uses: robotology/gh-action-nightly-merge@v1.3.1
+      with:
+        stable_branch: canary
+        development_branch: staging
+        allow_ff: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
