--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -1,6 +1,8 @@
 name: 'Canary Release'
 on:
   push:
+    branches:
+      - staging
     tags:
       - v[0-9]+.[0-9]+.[0-9]+*
   workflow_dispatch:
