--- a/.github/workflows/canary.yml
+++ b/.github/workflows/canary.yml
@@ -1,13 +1,11 @@
 name: 'Canary Release'
 on:
   push:
-    branches:
-      - staging
     tags:
       - v[0-9]+.[0-9]+.[0-9]+*
   workflow_dispatch:
 jobs:
-  canary-releaes:
+  canary-release:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
