--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -2,13 +2,14 @@ on:
   push:
     branches:
       - staging
-  workflow_dispatch:
+#  workflow_dispatch:
 name: Staging Release
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - uses: GoogleCloudPlatform/release-please-action@v2
+	id: release
         with:
           release-type: node
           package-name: testworkflow
@@ -17,11 +18,11 @@ jobs:
         # these if statements ensure that a publication only occurs when
         # a new release is created:
         if: ${{ steps.release.outputs.release_created }}
-      #- name: staging -> canary
-      - uses: robotology/gh-action-nightly-merge@v1.3.1
+      - name: staging -> canary
+        uses: robotology/gh-action-nightly-merge@v1.3.1
         with:
-          stable_branch: staging
-          development_branch: canary
+          stable_branch: 'staging'
+          development_branch: 'canary'
           allow_ff: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
