--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -18,8 +18,8 @@ jobs:
         # these if statements ensure that a publication only occurs when
         # a new release is created:
         if: ${{ steps.release.outputs.release_created }}
-      - name: staging -> canary
-        uses: robotology/gh-action-nightly-merge@v1.3.1
+      #- name: staging -> canary
+      - uses: robotology/gh-action-nightly-merge@v1.3.1
         with:
           stable_branch: 'staging'
           development_branch: 'canary'
